# mastermind

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix
doc/: demo.tape  mastermind.6.scd
src/: game.rs  lib.rs  main.rs
