[package]
name = "mastermind"
version = "0.1.0"
edition = "2021"
description = "Mastermind: a game of cunning and logic."
readme = "README.md"
repository = "https://github.com/mahyarmirrashed/mastermind"
license-file = "LICENSE"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
colored = "2.0.0"
itertools = "0.10.3"
rand = "0.8.5"
termion = "1.5.6"
